# Colosseum-of-Fate

./: BnD.hpp  CMakeLists.txt  CoF.cpp  CoF.hpp  CommonDefines.h  GLFunctions.cpp  GLFunctions.hpp  LICENSE  Log.cpp  Log.hpp  Mesh.hpp  README.md  StateBlue.cpp  StateBlue.hpp  StateRed.cpp  StateRed.hpp  appmain.cpp  appmain.h  bnd.h  cof.cpp  cof.h  glapp.cpp  glapp.h  log.cpp  log.h  main.cpp
